--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/minalan79/URL-Shortening-Service#readme",
   "dependencies": {
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7"
   }
 }
