--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/minalan79/URL-Shortening-Service#readme",
   "dependencies": {
-    "pg": "^8.13.1"
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "dotenv": "^16.4.7"
